compiler/tests/fixtures/invalid/semantics/selector_candidate_missing_initiator.viv
action do-thing:
    roles:
        @actor:
            as: recipient

action-selector pick-thing:
    roles:
        @actor:
            as: initiator
    target in order:
        do-thing;
